# penny-bot

./: .gitignore  README.md  mypy.ini  pyproject.toml
penny_bot/: bot.py  main.py  run.py
scripts/: format.sh  lint.sh
tests/: test_penny_bot.py
