[tool.poetry]
name = "penny-bot"
version = "0.1.0"
description = ""
authors = ["Liam Lundy <llundy013@gmail.com>"]
repository = "https://github.com/liamlundy/penny-bot"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.7.0"
mypy = "^0.800"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
